# LEMON

./: .claude-co.json  .coordination-context.md  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LEMON Requirements.docx.md  LICENSE  PIPELINE.md  README.md  TECH_DEBT.md  TESTING_GUIDE.md  axel known issues.md  checkFunc.py  claude.md  dev.sh  execute_workflow.py  generate_test_cases.py  generated_code.py  ground_truth_diabetes_treatment.py  ground_truth_liver_pathology.py  image.jpg.annotations.json  image.png.annotations.json  james.md  known_issues.md  label_test_cases.py  main.py  normalize_test_cases.py  package-lock.json  predict_workflow.py  pyproject.toml  pytest.ini  refine_code.py  refine_workflow_code.py  requirements.txt  run_api.py  run_mcp.py  run_project.sh  run_tests.py  startup.sh  (+9 more)
.claude/: settings.json  settings.local.json
.lemon/: auth.sqlite  demo_workflow_marker.json  history.sqlite  tokens_usage.json  workflows.sqlite
docs/: feature_adds.md  fix_plan.md  known_issues.md  summary.md
eval/: __init__.py  __main__.py  dataset.py  functional.py  harness.py  log.py  models.py  plot.py  run.py  run_eval.py  scaffold.py  scorer.py
evals/: HILL_CLIMBING.md  README.md  __init__.py  diagnostics.py  llm_judge.py  run_image_eval.py  scoring.py
fixtures/: diabetes.json  golden_diabetes_treatment.json  golden_lipid_management.json  golden_liver_pathology.json
frontend/: .orchestrator_state_1941ff2a-9eb5-4d3a-9b0f-a092d4a60280.json  .orchestrator_state_32685cd9-a4d4-4344-9fa1-d0c86afec643.json  .orchestrator_state_48141f07-a296-4529-a3ee-a3fec9171a97.json  .orchestrator_state_5a8d3856-1449-4ae8-88c4-255b96b0f513.json  .orchestrator_state_sess_mkbvuefv_5cdg6j.json  README.md  README_DASHBOARD.md  app.py  run.sh  (+2 more)
(+874 files in other folders)
