[project]
name = "lemon"
version = "0.0.0"
description = "Workflow diagram to deterministic Python code pipeline"
requires-python = ">=3.10"
dependencies = [
    # Core runtime
    "requests==2.32.3",
    "anthropic==0.76.0",
    "python-dotenv==1.0.1",
    "Pillow==10.4.0",
    "e2b-code-interpreter",
    "tqdm==4.66.5",
    # Core packages
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "mcp==1.25.0",
    # Web framework
    "fastapi==0.115.0",
    "slowapi==0.1.9",
    "websockets==13.1",
    "uvicorn==0.31.1",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -ra"
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


